--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,6 +14,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:allowBackup="true"
+        android:allowClearUserData="true"
         android:hardwareAccelerated="true"
         android:hasCode="true"
         android:icon="@drawable/ic_launcher"
